total redesign! changed images, sections, added text to hero section, added whitespace to all sections, fixed nav bar links, added z-index to nav to stop image overlap

--- a/style.css
+++ b/style.css
@@ -34,22 +34,25 @@ button {
 	outline: inherit;
 }
 
-header {
+#header-img {
+    border-radius: 15px;
+    opacity: 0.8;
+}
+
+.nav {
+    padding: 5px;
     display: flex;
     width: 100%;
     background-color: rgb(189, 189, 189);
     position: fixed;
     top: 0;
-}
-
-
-.nav {
-    margin-left: auto;
-    padding: 5px;
+    z-index: 99999;
 }
 
 .nav button {
     padding: 15px 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .submit-btn {
@@ -85,11 +88,14 @@ header {
 .hero-section {
     margin-top: 80px;
 }
-
 img {
     height: auto;
-    width: 100px;
-    padding-right: 20px;
+    max-width: 50%;
+}
+
+.features .flex img {
+    max-width: 8%;
+    margin-right: 20px;
 }
 
 .flex {
@@ -144,6 +150,15 @@ a {
     color: inherit;
 }
 
+.whitespace {
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+#video {
+    border: none;
+}
+
 footer {
     background-color: black;
     width: 100%;
@@ -155,6 +170,15 @@ footer {
     .columns {
         flex-direction: column;
     }
+    .hero-section {
+        flex-direction: column;
+    }
+    .hero-section img {
+        max-width: 100%;
+    }
+    .hero-section * {
+        text-align: justify;
+    }
 }
   
 @media screen and (max-width: 576px) {
@@ -162,9 +186,10 @@ footer {
     display: none;
     }
     .features .flex div *{
-        text-align: center;
+        text-align: justify;
         }
     .container {
-        width: 100%;
+        max-width: 100%;
+        padding: 0px 20px;
     }
 }
